2008-10-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: orca branched for 2.24.

2008-10-13  William Jon McCann  <jmccann@redhat.com>

	* modulesets/gnome-suites-2.24.modules:
	GDM branched for 2.24

2008-10-13  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: vinagre branched for 2.24.

2008-10-13  Claudio Saavedra  <csaavedra@igalia.com>

	* modulesets/gnome-suites-2.24.modules: eog branched for 2.24.

2008-10-12  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/arch.py, jhbuild/versioncontrol/bzr.py,
	jhbuild/versioncontrol/cvs.py, jhbuild/versioncontrol/darcs.py,
	jhbuild/versioncontrol/git.py, jhbuild/versioncontrol/hg.py,
	jhbuild/versioncontrol/mtn.py, jhbuild/versioncontrol/svn.py: check the
	programs exist before the checkout (closes: #555690)

2008-10-12  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/git.py: fixed remaining occurences of
	'git-svn' command usage (closes: #555259); also cleaned up module.

2008-10-12  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: reall use glib trunk.

2008-10-11  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* modulesets/gnome-2.26.modules: Added gjs,
	gobject-introspection and gir-repository.

2008-10-10  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: accerciser branched for 2.24.

2008-10-09  Frederic Peters  <fpeters@0d.be>

	* sample.jhbuildrc: fixed reference to makeargs in sample configuration
	file.

2008-10-09  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome-suites-2.26.modules: Use glib trunk.

2008-10-06  José Alburquerque  <jaalburqu@svn.gnome.org>

	* modulesets/gnome-2.22.modules:
	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-2.26.modules: Added gst-plugins-good to gstreamermm
	package suggestion dependency list.

2008-10-03  Matthias Clasen  <mclasen@redhat.com>

	* modulesets/gnome-external-deps-2.26.modules: Update libxml version
	to 2.7.2
