@@ -1,3 +1,7 @@
+2008-10-16  Iago Toral Quiroga <itoral@igalia.com>
+
+	* jhbuild/commands/bot.py: Added --logfile option.
+
 2008-10-15  Frederic Peters  <fpeters@0d.be>
 
 	* modulesets/gnome-suites-2.24.modules: orca branched for 2.24.
